# deep-learning-playground

./: .gitignore  deep-learning.code-workspace  getting-started-with-nlp-for-absolute-beginners.ipynb  lesson1.ipynb  lesson2.ipynb  pyproject.toml
