[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["Tomasz Rogozik <tomasz.rogozik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
notebook = ">=7.2.2"
torch = "^2.4.1"
fastai = "^2.7.17"
duckduckgo-search = ">=6.2"
jupyter-contrib-nbextensions = "^0.7.0"
astroid = ">=2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
